--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -2,26 +2,18 @@
 
 #banner-article {
   background: linear-gradient(297deg, $main-color, $second-color 100%);
-  // height: 310px;
-  // padding: 20px;
-
-  // display: grid;
-  // grid-template-columns: repeat(2, 1fr);
-  // max-width: 1200px;
-  // margin: auto;
-  // position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  padding: 20px;
 
   .support-title {
-    color: white;
+    color: $background-light;
     font-weight: 900;
     margin: auto;
-    position: absolute;
-    top: 80px;
-    left: 80px;
-    z-index: 2;
 
     h1 {
-      font-size: 40px;
+      font-size: 2.4rem;
       margin-bottom: 15px;
     }
 
@@ -29,52 +21,84 @@
       font-size: 18px;
     }
   }
-}
 
-.search-bar {
-  .section-right input {
-    height: 30px;
-    width: 400px;
-    border: none;
-  }
+  .search-bar {
+    display: flex;
 
-  .section-right button {
-    height: 30px;
-    padding: 0 15px;
-    color: white;
-    background: #333;
-    border: none;
-  }
-}
+    input {
+      height: 30px;
+      width: 30vw;
+      border: none;
+    }
 
-#content-article {
-  padding: 20px;
-
-  .title {
-    margin-bottom: 20px;
-    font-size: 26px;
-    color: #333333;
-  }
-
-  p {
-    margin-bottom: 10px;
+    button {
+      height: 30px;
+      padding: 0 1rem;
+      color: $background-light;
+      background: $text-color-light;
+      border: none;
+    }
   }
 }
 
-#sidebar {
-  padding: 10px;
-  width: 50%;
+#container-article {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  padding-top: 40px;
+  width: 80vw;
+  margin: auto;
+  gap: 40px;
 
-  .title {
-    margin-bottom: 20px;
-    font-size: 24px;
-  }
+  #content-article {
+    .title {
+      margin-bottom: 20px;
+      font-size: 26px;
+      color: $text-color-light;
+    }
 
-  ul {
-    list-style: none;
-
-    li {
+    p {
       margin-bottom: 10px;
     }
+  }
+
+  #sidebar {
+    .title {
+      margin-bottom: 20px;
+      font-size: 24px;
+    }
+
+    ul {
+      list-style: none;
+
+      li {
+        margin-bottom: 10px;
+        a {
+          text-decoration: none;
+          color: $text-color-light;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  #banner-article {
+    grid-template-columns: 1fr;
+    gap: 30px;
+
+    .support-title {
+      text-align: center;
+    }
+
+    .search-bar {
+      justify-content: center;
+    }
+  }
+
+  #container-article {
+    grid-template-columns: 1fr;
+    width: auto;
+    padding: 40px 20px;
+    gap: 20px;
   }
 }
