update styles article

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -97,7 +97,8 @@
 
   #container-article {
     grid-template-columns: 1fr;
-    width: auto;
+    width: 90vw;
+    margin: auto;
     padding: 40px 20px;
     gap: 20px;
   }
