update styles footer

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -68,8 +68,8 @@
       i {
         color: $main-color;
         background-color: #272b2d;
-        padding: 20px;
-        border-radius:  45%;
+        padding: 15px 20px;
+        border-radius:  50%;
         font-size: 20px;
         
         &:hover {
