update styles home

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -72,7 +72,7 @@
   #banner-home div img {
     right: -260px;
   }
-  #container #home-content .cards {
+  #container-home #home-content .cards {
     grid-template-columns: repeat(2, 1fr);
   }
 }
