--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,8 @@
 @import "colors";
 
 #header {
-  padding: 15px 30px;
-  max-width: 1200px;
+  padding: 1rem 1.75rem;
+  max-width: 80rem;
   margin: auto;
 
   section {
@@ -11,7 +11,7 @@
     align-items: center;
 
     img {
-      margin-right: 20px;
+      margin-right: 1.25rem;
     }
 
     .nav {
@@ -19,16 +19,15 @@
       align-items: center;
       flex-wrap: wrap;
       justify-content: flex-end;
-      gap: 1px;
-      margin-top: 10px;
+      gap: 0.0625rem;
 
       a {
         text-decoration: none;
         color: $text-color-light;
-        font-size: 14px;
+        font-size: 0.875rem;
         font-weight: 600;
         transition: color 0.2s;
-        padding: 12px;
+        padding: 0.75rem;
 
         &:hover {
           color: $main-color;
@@ -36,10 +35,10 @@
       }
 
       a:last-child {
-        border: 2px solid $main-color;
+        border: 0.125rem solid $main-color;
         color: $main-color;
-        padding: 10px 20px;
-        border-radius: 7px;
+        padding: 0.625rem 1.25rem;
+        border-radius: 0.4375rem;
       }
     }
 
@@ -61,25 +60,25 @@
         top: 0;
         right: -50vw;
         height: 100vh;
-        width: 275px;
-        padding: 20px;
+        width: 17.1875rem;
+        padding: 1.25rem;
         z-index: 5;
-        border-radius: 18px 0 0 18px;
+        border-radius: 1.125rem 0 0 1.125rem;
         transition: 0.5s;
 
         img {
-          margin: 15px 0 0 15px;
+          margin: 0.9375rem 0 0 0.9375rem;
         }
 
         ul {
-          margin-top: 20px;
+          margin-top: 1.25rem;
           list-style: none;
           display: flex;
           flex-direction: column;
 
           li {
-            padding: 10px 15px;
-            border-radius: 6px;
+            padding: 0.625rem 0.9375rem;
+            border-radius: 0.375rem;
 
             * {
               color: $button-color;
@@ -90,8 +89,8 @@
             }
 
             i {
-              margin-right: 10px;
-              font-size: 15px;
+              margin-right: 0.625rem;
+              font-size: 0.9375rem;
             }
 
             &:hover {
@@ -118,14 +117,15 @@
     .nav-mobile-button {
       color: $text-color-light;
       display: none;
-      font-size: 22px;
+      font-size: 1.375rem;
       cursor: pointer;
       transition: 0.2s;
       position: fixed;
-      right: 3px;
+      right: 0.1875rem;
       background: $background-medium;
-      padding: 6px 10px;
+      padding: 0.375rem 0.625rem;
       border-radius: 50%;
+      z-index: 1;
 
       &:hover {
         color: $second-color;
@@ -135,9 +135,9 @@
 }
 
 #rule-light {
-  border-bottom: 1px solid $background-dark;
+  border-bottom: 0.0625rem solid $background-dark;
   width: 80%;
-  margin: 10px auto;
+  margin: 0.625rem  auto;
 }
 
 @media (max-width: 720px) {
