--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -70,23 +70,39 @@
 
     p {
       margin-bottom: 0.625rem;
+
+      a {
+        color: $main-color-hover;
+        text-decoration: none;
+        font-weight: 500;
+
+        &:hover {
+          color: $main-light-color;
+        }
+      }
     }
   }
 
   #sidebar {
     .title {
-      margin-bottom: 1.25rem;
-      font-size: 1.5rem;
+      margin-bottom: 0.25rem;
+      font-size: 1.35rem;
     }
 
     ul {
       list-style: none;
+      margin-bottom: 2rem;
 
       li {
         margin-bottom: 0.625rem;
         a {
           text-decoration: none;
           color: $text-color-light;
+          cursor: pointer;
+
+          &:hover {
+            font-weight: 500;
+          }
         }
       }
     }
@@ -95,7 +111,7 @@
 
 #rate {
   max-width: 20rem;
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
