--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -1,19 +1,20 @@
-@import "colors";
+@import "../../styles/colors";
 
 .card {
   background: $background-light;
   text-align: center;
   width: auto;
-  padding: 1.875rem;
+  padding-block: 1.25rem;
+  padding-inline: 0.5rem;
   border-radius: 0.625rem;
   box-shadow: 0.0625rem 0.0625rem 0.625rem #dddddd,
     -0.0625rem -0.0625rem 0.625rem #dddddd;
   cursor: pointer;
   transition: background-color 0.2s;
 
-  i {
+  svg {
     color: $main-color;
-    font-size: 1.875rem;
+    font-size: 2rem;
     margin: 0 0 0.625rem 0;
   }
 
@@ -28,13 +29,9 @@
   }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 768px) {
   .card {
     padding: 1rem;
-
-    i {
-      font-size: 1.2rem;
-    }
 
     div {
       color: $text-color-light;
