--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -26,29 +26,44 @@
     }
 
     .search-bar {
-      display: flex;
+      div {
+        display: flex;
 
-      input {
-        height: 1.85rem;
-        width: 100%;
-        border: none;
-        padding-left: 0.25rem;
-        font-size: 1.15rem;
-        outline: none;
+        input {
+          height: 1.8rem;
+          width: 100%;
+          border: none;
+          padding-left: 0.25rem;
+          font-size: 1.15rem;
+          outline: none;
+        }
+
+        button {
+          height: 1.8rem;
+          padding: 0 1rem;
+          color: $background-light;
+          background: $text-color-light;
+          border: none;
+          cursor: pointer;
+          transition: 0.2s;
+
+          &:hover {
+            color: $main-color;
+          }
+        }
       }
 
-      button {
-        height: 1.875rem;
-        padding: 0 1rem;
-        color: $background-light;
-        background: $text-color-light;
-        border: none;
-        cursor: pointer;
-        transition: 0.2s;
-
-        &:hover {
-          color: $main-color;
-        }
+      #input-warnig {
+        color: $warning-color;
+        background-color: #4d4d4d;
+        font-size: 0.9rem;
+        font-weight: 500;
+        padding: 0.1rem 0.2rem;
+        justify-self: end;
+        margin-top: 0.4rem;
+        width: fit-content;
+        border-radius: 0.2rem;
+        transition: 200ms;
       }
     }
   }
@@ -73,11 +88,11 @@
       }
 
       .search-bar {
-        display: grid;
-        grid-template-columns: 8fr 2fr;
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
+        div {
+          display: grid;
+          grid-template-columns: 8fr 2fr;
+          width: 100%;
+        }
       }
     }
   }
