--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -22,6 +22,7 @@
         margin-right: 1rem;
         margin-top: 0.4375rem;
         opacity: 0.7;
+        cursor: pointer;
 
         &:hover {
           opacity: 1;
@@ -36,6 +37,7 @@
           text-decoration: none;
           color: $second-color;
           font-weight: 500;
+          cursor: pointer;
 
           &:hover {
             text-decoration: underline;
