--- a/src/pages/Search/styles.scss
+++ b/src/pages/Search/styles.scss
@@ -9,13 +9,14 @@
   #numberResults {
     background: $cancel-button;
     color: $text-main-color;
-    padding: 0.25rem 1rem;
+    padding: 0.1rem 0.5rem;
     margin-bottom: 1rem;
     max-width: 10rem;
     font-weight: 500;
-    font-size: 1.15rem;
-    border-radius: 0.35rem;
+    font-size: 1rem;
+    border-radius: 0.2rem;
     text-align: center;
+    width: fit-content;
 
     &.green {
       background: $second-color;
