--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -12,7 +12,7 @@
     margin-inline: auto;
 
     .support-title {
-      color: $background-light;
+      color: $light-color;
       font-weight: 900;
 
       h1 {
@@ -41,8 +41,8 @@
         button {
           height: 1.8rem;
           padding: 0 1rem;
-          color: $background-light;
-          background: $text-color-light;
+          color: $light-color;
+          background: $bg-dark;
           border: none;
           cursor: pointer;
           transition: 0.2s;
