--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,24 +1,13 @@
 $main-color: #62b357;
-$main-light-color: #4fc039;
-$second-color: #4fc039;
+$main-color-light: #4fc039;
 $main-color-hover: #429e2f;
+$second-color: #4fc039;
 $danger-color: #dc143c;
 $danger-color-hover: #a80828;
-$pendent-color: #ff1b48;
 $warning-color: #ff9c1b;
-$button-color: #ffffff;
-$cancel-button: #666666;
-$cancel-button-hover: #333333;
-$text-main-color: #ffffff;
-$text-color-light: #333333;
-$text-color-dark: #222222;
-$background-light: #ffffff;
-$background-medium: #efefef;
-$background-dark: #f3f3f3;
-$border-light: #dedede;
-$border-medium: #cccccc;
-$contrast: #333333;
-$shadow: rgba(0, 0, 0, 0.1);
-$border-success: #c2decc;
-$background-success: #e1f7e2;
-$text-success: #333333;
+$shadow-medium: #cccccc;
+$bg-dark: #333333;
+$bg-medium: #efefef;
+$bg-light: #f3f3f3;
+$semi-dark-color: #686868;
+$light-color: #fff;
