--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -63,7 +63,7 @@
         margin-top: 0.4rem;
         width: fit-content;
         border-radius: 0.2rem;
-        transition: 200ms;
+        position: absolute;
       }
     }
   }
