--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -77,6 +77,10 @@
             text-decoration: underline;
           }
         }
+
+        :last-child {
+          margin-top: 0.3rem;
+        }
       }
 
       .col-3 {
